Closed Bug 1811804 Opened 1 year ago Closed 1 year ago

GeckoJavaSampler::StopProfiler doesn't stop the profiler

Categories

(Core :: Gecko Profiler, defect, P1)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: florian, Assigned: canova)

References

Details

Attachments

(1 file)

Using the profiler directly within Fenix with the instructions at https://profiler.firefox.com/docs/#/./guide-profiling-android-directly-on-device?id=profiling-firefox-for-android-directly-on-device leaves the SamplerThreads running after capturing the profile.

Profiling on Fenix using remote profiling doesn't leave the profiler running.

Nazim looked into it and wrote on Matrix:

fenix profiling calls this function and this C++ function gets called with JNI. If you look at that function we pause the profiler and then capture the data but don't stop it in the end.

Severity: -- → S3
Priority: -- → P1
Assignee: nobody → canaltinova
Status: NEW → ASSIGNED
Pushed by canaltinova@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/0565816c9303
Stop the profiler after capturing a profile on an Android device r=mstange
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: