Bug 1811804 - Stop the profiler after capturing a profile on an Android device r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D167578